Crash after duplicating and hiding vertices while using X Axis Mirror #80224

Closed
opened 2020-08-29 18:07:13 +02:00 by Dario Abatianni · 7 comments

System Information
Operating system: Linux-5.2.14-1-default-x86_64-with-glibc2.17 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-28 21:41, hash: 141a3e6d47
Worked: blender-2.90.0-9f5cc128d955-linux64 hash: 9f5cc128d9
Broken since at least: blender-2.90.0-62aa103d485f-linux64 62aa103d48

Short description of error

Crash when moving a vertex after duplicating and hiding a mesh with X axis mirror enabled

Exact steps for others to reproduce the error

  • Open a new Blender default scene
  • Tab into edit mode
  • Switch to vertex select
  • Select all vertices (a)
  • Click X in the mirror settings at the top right (Mesh.use_mirror_x)
  • Duplicate the vertices (shift+d)
  • Cancel movement (right mouse button)
  • Hide the duplicate mesh (h)
  • Select the bottom-left-back vertex in the cube
  • Grab vertex (g)
  • Move mouse
  • CRASH

Steps shown in the attached video file:
capture-2020-08-29_17.35.08.mp4

**System Information** Operating system: Linux-5.2.14-1-default-x86_64-with-glibc2.17 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-28 21:41, hash: `141a3e6d47` Worked: blender-2.90.0-9f5cc128d955-linux64 hash: `9f5cc128d9` Broken since at least: blender-2.90.0-62aa103d485f-linux64 `62aa103d48` **Short description of error** Crash when moving a vertex after duplicating and hiding a mesh with X axis mirror enabled **Exact steps for others to reproduce the error** - Open a new Blender default scene - Tab into edit mode - Switch to vertex select - Select all vertices (a) - Click X in the mirror settings at the top right (Mesh.use_mirror_x) - Duplicate the vertices (shift+d) - Cancel movement (right mouse button) - Hide the duplicate mesh (h) - Select the bottom-left-back vertex in the cube - Grab vertex (g) - Move mouse - ***CRASH*** Steps shown in the attached video file: [capture-2020-08-29_17.35.08.mp4](https://archive.blender.org/developer/F8819212/capture-2020-08-29_17.35.08.mp4)

Added subscriber: @Eisfuchs

Added subscriber: @Eisfuchs

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 56076e0492

This issue was referenced by 56076e04920c8d570bf7e234c6987f4f440ee58b

This issue was referenced by 907a718ebe

This issue was referenced by 907a718ebe3e242d923929af9dd7bd73130c6940

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-09-01 17:14:00 +02:00

Thanks for the report, I can confirm the issue.
This problem should be fixed in the next daily builds.
https://builder.blender.org/download/

Thanks for the report, I can confirm the issue. This problem should be fixed in the next daily builds. https://builder.blender.org/download/
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80224
No description provided.