Fix T80224: Crash after duplicating and hiding vertices while using X Axis Mirror

The mirror map can reference a hidden vertex that is currently ignored
in the transformation.

Thus the mirror element array is not filled.